--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     container_name: foodventeny
     ports: 
       - 3333:3333
+    depends_on:
+      - postgres
 
   postgres:
     image: postgres:latest
