--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,22 @@
 services:
   FoodventenyApp:
-    image: ./
+    server:
+      build: .
+      ports: 
+        - 3000:3000
     container_name: foodventeny
-    ports: 
-      - 3333:3333
     depends_on:
       - postgres
 
   postgres:
     image: postgres:latest
+    environment:
+      - POSTGRES_PASSWORD: 'postgres'
+      - POSTGRES_USER: 'postgres'
     ports: 
       - 5432:5432
+    volumes: 
+      - data:/var/lib/postgrsql/data
+
+volumes:
+  data:
