--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
