--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "pg": "^8.12.0",
